--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "recharts": "2.1.6",
     "stylis": "4.0.10",
     "stylis-plugin-rtl": "2.1.1",
+    "survey-creator-react": "^1.9.68",
     "use-places-autocomplete": "^4.0.0",
     "yup": "0.32.9"
   },
